[package]
name = "cryptlib"
version = "0.5.0"
description = "A simple cryptography library for encrypting and decrypting data based on openssl"
edition = "2021"

readme = "README.md"
authors = ["Marvin Dziedzina"]
repository = "https://github.com/Marvin-Dziedzina/cryptlib"
license-file = "LICENSE"

keywords = ["cryptography", "encryption", "simple", "security", "openssl"]
categories = ["cryptography"]

[dependencies]
openssl = "0.10.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0.*"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
